# agentic-ai-engineering

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/scripts/: diff_eval_snapshots.py
.github/workflows/: eval-regression.yml  lint.yml  notebooks.yml  pages.yml
.llm-cache/00-foundations/: 01-structured-outputs.jsonl  02-function-calling.jsonl  03-streaming-patterns.jsonl  04-prompt-patterns.jsonl
.llm-cache/01-rag/: 00-naive-rag.jsonl  04-reranking.jsonl  05-query-transformation.jsonl  06-self-rag.jsonl  07-corrective-rag.jsonl  08-agentic-rag.jsonl  09-graph-rag.jsonl  11-long-context-rag.jsonl
.llm-cache/02-indexing/: 04-knowledge-graph-index.jsonl  05-summary-tree-index.jsonl
00-foundations/: README.md
00-foundations/01-structured-outputs/: README.md  notebook.ipynb
00-foundations/02-function-calling/: README.md  notebook.ipynb
00-foundations/03-streaming-patterns/: README.md
00-foundations/04-prompt-patterns/: README.md  eval-snapshot.json  eval.py
01-rag/: README.md
01-rag/00-naive-rag/: README.md  eval-snapshot.json  eval.py
01-rag/01-chunking-strategies/: README.md  eval-snapshot.json  eval.py
01-rag/02-embedding-comparison/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
01-rag/03-hybrid-search/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
01-rag/04-reranking/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
01-rag/05-query-transformation/: README.md  eval-snapshot.json  eval.py
01-rag/06-self-rag/: README.md  eval-snapshot.json  eval.py
01-rag/07-corrective-rag/: README.md  eval-snapshot.json  eval.py
01-rag/08-agentic-rag/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
01-rag/09-graph-rag/: README.md  eval-snapshot.json  eval.py
01-rag/10-multimodal-rag/: README.md  eval-snapshot.json  eval.py
01-rag/11-long-context-rag/: README.md  eval-snapshot.json  eval.py
01-rag/12-comparison-bench/: README.md  eval-snapshot.json  eval.py  leaderboard.md
02-indexing/: README.md
02-indexing/00-vector-db-comparison/: README.md  eval-snapshot.json  eval.py
02-indexing/01-hnsw-deep-dive/: README.md  eval-snapshot.json  eval.py
02-indexing/02-ivf-pq-quantization/: README.md  eval-snapshot.json  eval.py
02-indexing/03-bm25-and-hybrid/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
02-indexing/04-knowledge-graph-index/: README.md  eval-snapshot.json  eval.py
02-indexing/05-summary-tree-index/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
02-indexing/06-colbert-late-interaction/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
02-indexing/07-incremental-indexing/: README.md  eval-snapshot.json  eval.py
03-agentic-frameworks/: README.md  task.py
03-agentic-frameworks/00-react-from-scratch/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
03-agentic-frameworks/01-langgraph/: README.md  eval-snapshot.json  eval.py
03-agentic-frameworks/02-pydantic-ai/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
03-agentic-frameworks/03-crewai/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
03-agentic-frameworks/04-microsoft-agent-framework/: README.md  eval-snapshot.json  eval.py
03-agentic-frameworks/05-openai-agents-sdk/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
03-agentic-frameworks/06-smolagents/: README.md  eval-snapshot.json  eval.py
03-agentic-frameworks/07-framework-comparison/: README.md  eval-snapshot.json  eval.py  leaderboard.md
04-human-in-the-loop/: README.md  hitl.py
04-human-in-the-loop/00-interrupt-and-resume/: README.md  eval-snapshot.json  eval.py
04-human-in-the-loop/01-approval-gates/: README.md  eval-snapshot.json  eval.py
04-human-in-the-loop/02-edit-state/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
04-human-in-the-loop/03-time-travel-debug/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
04-human-in-the-loop/04-streaming-with-intervention/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
04-human-in-the-loop/05-async-hitl-via-queue/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
05-evals-and-observability/: README.md
05-evals-and-observability/00-ragas-rag-eval/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
05-evals-and-observability/01-ragas-agent-eval/: README.md  eval-snapshot.json  eval.py  traces.json
05-evals-and-observability/02-langfuse-tracing/: README.md  eval-snapshot.json  eval.py  notebook.ipynb  recorder.py
05-evals-and-observability/03-llm-as-judge/: README.md  eval-snapshot.json  eval.py  notebook.ipynb  pairs.json
05-evals-and-observability/04-synthetic-eval-data/: README.md  eval-snapshot.json  eval.py  generated-qa.jsonl
05-evals-and-observability/05-regression-suite/: README.md  eval-snapshot.json  eval.py  regression.py
05-evals-and-observability/06-cost-and-latency-bench/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
06-mcp/: README.md  mcp_core.py
06-mcp/00-mcp-server-basics/: README.md  eval-snapshot.json  eval.py
06-mcp/01-mcp-client-in-agent/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
06-mcp/02-mcp-with-resources/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
06-mcp/03-custom-mcp-for-internal-api/: README.md  eval-snapshot.json  eval.py  notebook.ipynb
07-deployment-patterns/: README.md
07-deployment-patterns/00-fastapi-streaming-agent/: README.md  app.py  eval-snapshot.json  eval.py
07-deployment-patterns/01-streamlit-demo-template/: README.md  app.py  eval-snapshot.json  eval.py
07-deployment-patterns/02-docker-compose-stack/: README.md  compose.yaml  (+2 more)
benchmarks/: README.md
docs/: _nav_leaves.yml  architecture.md  browser-execution.md  case-studies.md  dashboard.md  from-scratch.md  index.md  launch-checklist.md  leaderboard.md  learning-path.md  skills-matrix.md
scripts/: build_dashboard.py  build_jupyterlite.py  rewrite_leaf_links.py  sync_leaves_to_docs.py
shared/: README.md  __init__.py  cache.py  embedders.py  llm.py  loaders.py  paths.py  prompts.py
(+134 files in other folders)
