[project]
name = "agentic-ai-engineering"
version = "0.1.0"
description = "Hub portfolio for agentic AI engineering: RAG, indexing, frameworks, HITL, evals, MCP, deployment."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
# Phase 0: no runtime deps at the root. Per-topic deps live in dependency groups
# below and get installed selectively with `uv sync --group <name>`.
dependencies = []

# --- Dependency groups (PEP 735 / uv) -------------------------------------
# Each phase adds deps to its own group. Keep the root install slim.
[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "nbconvert>=7",
    "nbclient>=0.10",
    "ipykernel>=6",
    "jupyter>=1",
    "pre-commit>=4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.25",
]
foundations = [
    "litellm>=1.52",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]
rag = [
    "litellm>=1.52",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.8",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "pillow>=10.4",
]
corpus = [
    # Only needed to *fetch* the canonical arxiv corpus locally; CI never runs this.
    "arxiv>=2.1",
    "pypdf>=5.0",
]
indexing = [
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "rank-bm25>=0.2.2",
    "networkx>=3.3",
    "faiss-cpu>=1.8",
]
# frameworks = []
# hitl = []
# evals = []
# mcp = []
# deployment = []

[tool.uv]
default-groups = ["dev"]

# --- Ruff ----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*.ipynb"]  # notebooks handled separately

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
docstring-code-format = true

# --- Mypy ----------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
# Each leaf folder ships its own `eval.py` — they share a filename but live in
# separate dirs, so mypy sees them as duplicate top-level modules. They are
# short procedural scripts whose dependencies (shared/, benchmarks/) ARE type
# checked, so exclude the script files themselves rather than fight mypy.
exclude = ["build/", ".venv/", "site/", ".*/eval\\.py$"]

# --- Pytest --------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests", "**/tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "needs_api_key: requires real LLM provider credentials",
]
