[project]
name = "agentic-ai-engineering"
version = "0.1.0"
description = "Hub portfolio for agentic AI engineering: RAG, indexing, frameworks, HITL, evals, MCP, deployment."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
# Phase 0: no runtime deps at the root. Per-topic deps live in dependency groups
# below and get installed selectively with `uv sync --group <name>`.
dependencies = []

# --- Dependency groups (PEP 735 / uv) -------------------------------------
# Each phase adds deps to its own group. Keep the root install slim.
[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "nbconvert>=7",
    "nbclient>=0.10",
    "ipykernel>=6",
    "jupyter>=1",
    "pre-commit>=4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-jupyter>=0.25",
]
# Phase 11: in-browser notebooks via JupyterLite/Pyodide. Built into the
# docs site by `scripts/build_jupyterlite.py` so the from-scratch leaves
# are one-click runnable from GitHub Pages.
jupyterlite = [
    "jupyterlite-core>=0.4",
    "jupyterlite-pyodide-kernel>=0.4",
    "jupyterlab>=4.2",
    "libarchive-c>=5",
]
foundations = [
    "litellm>=1.52",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]
rag = [
    "litellm>=1.52",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.8",
    "networkx>=3.3",
    "matplotlib>=3.9",
    "pillow>=10.4",
]
corpus = [
    # Only needed to *fetch* the canonical arxiv corpus locally; CI never runs this.
    "arxiv>=2.1",
    "pypdf>=5.0",
]
indexing = [
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "rank-bm25>=0.2.2",
    "networkx>=3.3",
    "faiss-cpu>=1.8",
]
# Phase 4: evals + observability. We intentionally re-implement RAGAS-style
# metrics on top of the shared LLM shim so the cache works and we don't
# couple the repo to RAGAS's release cadence. Langfuse is optional.
evals = [
    "litellm>=1.52",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "numpy>=1.26",
    "pytest>=8",
]
# Phase 5: agentic frameworks. Each notebook shows the framework's idiomatic
# code; the eval falls back to the shared offline solver in
# `03-agentic-frameworks/task.py` so CI stays offline. Some packages have
# heavy transitive deps - install opt-in with `uv sync --group frameworks`.
frameworks = [
    "litellm>=1.52",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "numpy>=1.26",
]
# Phase 6: HITL patterns. The shared `04-human-in-the-loop/hitl.py` runner is
# pure-Python (no langgraph dep needed) so the snapshots reproduce in CI; the
# notebooks show the real LangGraph code in markdown for readers with the
# framework installed.
hitl = [
    "litellm>=1.52",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
]
# Phase 7: MCP. We ship a tiny in-process JSON-RPC implementation in
# `06-mcp/mcp_core.py` so leaves run without the official MCP SDK, but the
# notebooks reference `fastmcp` / `mcp` for production setups.
mcp = [
    "pydantic>=2.9",
    "litellm>=1.52",
    "python-dotenv>=1.0",
]
# Phase 8: deployment patterns. Only the leaves that actually exercise the
# server need fastapi/uvicorn; the rest are config-only.
deployment = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "streamlit>=1.39",
    "litellm>=1.52",
    "pydantic>=2.9",
    "pyyaml>=6.0",
]

[tool.uv]
default-groups = ["dev"]

# --- Ruff ----------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["*.ipynb"]  # notebooks handled separately

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
    "N",   # pep8-naming
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.ruff.format]
docstring-code-format = true

# --- Mypy ----------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
# Each leaf folder ships its own `eval.py` — they share a filename but live in
# separate dirs, so mypy sees them as duplicate top-level modules. They are
# short procedural scripts whose dependencies (shared/, benchmarks/) ARE type
# checked, so exclude the script files themselves rather than fight mypy.
exclude = ["build/", ".venv/", "site/", ".*/eval\\.py$", ".*/app\\.py$"]

# --- Pytest --------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests", "**/tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "needs_api_key: requires real LLM provider credentials",
]
